# mcga-cli

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: basic.cpp
include/mcga/: cli.hpp
include/mcga/cli/: argument.hpp  choice_argument.hpp  command_line_option.hpp  command_line_spec.hpp  disallow_copy_and_move.hpp  exceptions.hpp  flag.hpp  generator.hpp  list_argument.hpp  numeric_argument.hpp  parser.hpp
src/: argument.cpp  command_line_option.cpp  command_line_spec.cpp  exceptions.cpp  flag.cpp  generator.cpp  list_argument.cpp  numeric_argument.cpp  parser.cpp
tests/: choice_argument_test.cpp  flag_test.cpp  help_test.cpp  list_argument_test.cpp  numeric_argument_test.cpp  parser_test.cpp
